--- a/packages/tree/package.json
+++ b/packages/tree/package.json
@@ -40,6 +40,8 @@
   },
   "dependencies": {
     "@illa-design/icon": "*",
-    "@illa-design/theme": "*"
+    "@illa-design/theme": "*",
+    "@illa-design/system": "*",
+    "@illa-design/list": "*"
   }
 }
