--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "ts-jest": "^27.1.3",
     "turbo": "^1.1.1",
     "typescript": "^4.5.2",
-    "vite": "^2.8.6"
+    "vite": "^2.8.6",
+    "@emotion/css": "^11.7.1"
   },
   "resolutions": {
     "graceful-fs": "4.2.9"
