feat: finish tree develop

--- a/packages/tree/package.json
+++ b/packages/tree/package.json
@@ -42,6 +42,7 @@
     "@illa-design/theme": "*",
     "@illa-design/system": "*",
     "@illa-design/list": "*",
-    "@illa-design/icon": "*"
+    "@illa-design/icon": "*",
+    "@illa-design/checkbox": "*"
   }
 }
